main.css
@import url('https://fonts.googleapis.com/css?family=Iceland|Unica+One');

/**** Reset CSS (remove browser defaults) ****/
body, html, div, blockquote, img, label, p, h1, h2, h3, h4, h5, h6, pre, ul, ol,
li, dl, dt, dd, form, a, fieldset, input, th, td {
	margin: 0; padding: 0; border: 0; outline: none;
}

/********************
 * Fonts
 ********************/
body { 	
	font-size: 18px;
	font-family: Calibri, Arial, sans-serif;
	transition: font-size .5s;
	/*text-align: justify;*/
}
 
header > div > h1{
	font-size: 60px;
	font-weight: bold;
	font-family: 'Iceland', Calibri, Arial, sans-serif;
	padding-bottom: 0px;
	transition: font-size .5s;
}

header > div > h2{
	font-size: 24px;
	font-weight: lighter;
	font-family: 'Iceland', Calibri, Arial, sans-serif;	
	text-align: left;
	padding-bottom: 15px;
	padding-left: 10px;
	white-space: nowrap;
	text-decoration: none;
	margin-bottom: 0px;
	transition: font-size .5s;
}

h2 {
	font-size: 34px;
	font-family: 'Unica One', Calibri, Arial, sans-serif;
	transition: font-size .5s;
}

h3 {
	font-size: 24px;
	font-family: 'Iceland', Calibri, Arial, sans-serif;
	transition: font-size .5s;
}

strong {
	font-size: 22px;
	font-family: 'Iceland', Calibri, Arial, sans-serif;
}

footer {
	font-size: 16px;
}

nav > ul > li > a {
	font-size: 18px;
	font-weight: bold;
	font-family: 'Unica One', Calibri, Arial, sans-serif;
}


/********************
 * Colors
 ********************/

html {
	background: rgb(220, 220, 220) url(images/background.jpg) no-repeat repeat top center scroll; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}
 
body {
	/*main font and bg colors for all pages */
	color: rgb(120, 120, 120);		
}

header, footer {
	/*font and bg colors for all headers and footers */
	color: rgb(248, 248, 248);
	background: rgb(80, 80, 90);
}

header > div > h2{
	color: rgb(176,176,176);
}

.darken {
	background: rgba(0, 0, 0, .2);
}

.lighten {
	background: rgba(255, 255, 255, .8);
}

nav > ul > li > .secA {  
	color: rgb(248,176,176);
	border-bottom-color: rgb(248,176,176);
}

nav > ul > li > .secB  {    
	color: rgb(176,248,248);
	border-bottom-color: rgb(176,248,248);
}

nav > ul > li > .secC  {  
	color: rgb(248,248,176);
	border-bottom-color: rgb(248,248,176);
}

nav > ul > li > .secD  {  
	color: rgb(176,248,176);
	border-bottom-color: rgb(176,248,176);
}

nav > ul > li > .secE  {  
	color: rgb(176,176,248);
	border-bottom-color: rgb(176,176,248);
}

nav > ul > li > .secF  {  
	color: rgb(176,248,248);
	border-bottom-color: rgb(176,248,248);
}

nav > ul > li > a {
	color: #fff; /* IE8 proofing */
	color: rgb(248,248,248);
	border-bottom-color: rgb(248,248,248);
}

h2.secA, h3.secA, strong.secA, span.secA {
	color: rgb(160, 120, 120);
}

h2.secB, h3.secB, strong.secB, span.secB {
	color: rgb(120, 160, 160);
}

h2.secC, h3.secC, strong.secC, span.secC {
	color: rgb(160, 160, 120);
}

h2.secD, h3.secD, strong.secD, span.secD {
	color: rgb(120, 160, 120);
}

h2.secE, h3.secE, strong.secE, span.secE {
	color: rgb(120, 120, 160);
}

h2.secF, h3.secF, strong.secF, span.secF {
	color: rgb(120, 160, 160);
}

a {
	color: rgb(80, 80, 90);
}

a:visited {
	color: rgb(55, 55, 115);
}

a:hover ,
a:focus {
	color: rgb(115, 115, 150);
}


/********************
 * Page Elements
 ********************/
 
html {
	height: 100%;
}

body {
	height: 100%;
	overflow-y: scroll;
}

header {
	position: absolute;
	width: 100%;
}

header > nav > div{
	position: relative;
	height: 0%;
}

div.social{
	position: absolute;
	top: 0px;
	right: 0px;
	height: 100%;
}

div.social > a{
	vertical-align: middle;
}

h1 {
	padding-top: 15px;
	padding-bottom: 15px;
	padding-left: 10px;
	white-space: nowrap;
}

h2 {
	text-decoration: underline;
	text-align: center;
	margin-bottom: 10px;
}

h3 {
	margin-bottom: 10px;
}

.box > ul {
	padding-left: 20px;
	padding-bottom: 20px;
}

.box > ul > li > ul{
	padding-left: 20px;
}


p, .box > ul > li{
	padding-bottom: 12px;
}

table, td{
	padding-bottom: 20px;
}

.column {
	max-width: 1024px;
	margin: auto;
}

article {
	min-height: 100%;
}

.box {
	padding-top: 177px; /*157 + 20*/
	padding-bottom: 20px;
	padding-left: 20px;
	padding-right: 20px;
	transition: padding .5s;
}

footer {
	text-align: right;
	width: 100%;
	height: 20px;
	position: relative;
	bottom: 20px;
	left: 0;
}

.footerbox {
	padding-left: 10px;
	padding-right: 10px;
}

tr > .leftpad {
	padding-left: 10px;
}

.project {
	width: 128px;
	transition: width .5s;
}

.portrait {
	width: 140px;
	padding-left: 40px;
	padding-right: 40px;
	transition: width .5s, padding .5s;
}

.homeimg {
	max-width: 640px;
	margin: auto;
	padding-bottom: 20px;
}

.posthead {
	padding-bottom: 30px;
}

.posthead > h2{
	text-align: left;
	text-decoration: none;
}

.posthead > a {
	border: none;
	padding: 2px 8px;	
	text-align: center;
	text-decoration: none;
	
	opacity: 0.7;
	filter: alpha(opacity=7); /* For IE8 and earlier */
	
	border-radius: 6px;
	
	font-weight: bold;
	
	overflow: hidden;
}

.sharebtns > a:focus,
.sharebtns > a:active,
.sharebtns > a:visited {
	color: rgb(80, 80, 90);
}

.sharebtns > a:hover,
.sharebtns > a:focus {
	color: rgb(80, 80, 90);

	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */
}

.sharebtns > a {
	font-size: 18px;
	transition: font-size .5s;
	
	color: rgb(80, 80, 90);
	
	border: none;
	padding: 2px 8px;	
	text-align: center;
	vertical-align: top;
	text-decoration: none;
	
	opacity: 0.7;
	filter: alpha(opacity=7); /* For IE8 and earlier */
	
	border-radius: 6px;
	
	font-weight: bold;
	
	overflow: hidden;
}

.sharebtns > a > span {
	font-family: Calibri, Arial, sans-serif;
}

.posthead > a:focus,
.posthead > a:active,
.posthead > a:visited {
	color: rgb(80, 80, 90);
}

.posthead > a:hover,
.posthead > a:focus {
	color: rgb(80, 80, 90);

	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */
}

.paginator > ul {
	padding: 0;
}
.paginator > ul > li {

	display: inline-block;
	text-decoration: none;
}

/********************
 * Navigation Bar
 ********************/

nav {
	white-space: nowrap;
	font-size: 0px;
}

nav > ul > li {
	display: inline-block;
	margin-right: 10px;
	transition: margin-right .5s;
}

nav > ul > li > a {
	display: inline-block;

	padding-right: 20px;
	padding-left: 20px;
	padding-top: 10px;
	padding-bottom: 10px;
	
	text-decoration: none;
	border-bottom-width: 3px;
	border-bottom-style: solid;
	border-top-left-radius: 8px;
	border-top-right-radius: 8px;

	opacity: 0.7;
	filter: alpha(opacity=7); /* For IE8 and earlier */
	
	-webkit-transition: padding .5s;
	-moz-transition: padding .5s;
	-o-transition: padding .5s;
	-ms-transition: padding .5s;
	transition: padding .5s;
}

nav > ul > li > a:hover,
nav > ul > li > a:focus {
	padding-right: 30px;
	padding-left: 30px;
	background-color: rgba(0, 0, 0, .25);
  
	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */
}

nav > ul > .active > a
{
	padding-right: 30px;
	padding-left: 30px;
	
	padding-bottom: 7px;
	border-bottom-width: 6px;
	background-color: rgba(0, 0, 0, .25);

	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */	
}

nav > ul > .active > a:hover,
nav > ul > .active > a:focus {
	background-color: rgba(0, 0, 0, .35);
	
	opacity: 1.0;
	filter: alpha(opacity=100); /* For IE8 and earlier */
}

.fa {
	font-size: 24.6px;
	padding: 10px;
	text-align: center;
	text-decoration: none;
	margin: 0px;
	vertical-align: middle;
	color: rgb(176, 176, 176);
}

.fa:focus,
.fa:active,
.fa:visited {
	color: rgb(176, 176, 176);
}

.fa:hover{
	color: rgb(248, 248, 248);
}


/********************
 * Post Navigation
 ********************/

.postnav {
	padding-top: 20px;
}

.postnav > a {
	border: none;
	padding: 10px 20px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	position: relative;
	
	max-width: 45%;
	
	-webkit-transition: padding .5s;
	-moz-transition: padding .5s;
	-o-transition: padding .5s;
	-ms-transition: padding .5s;
	transition: padding .5s;
	
	opacity: 0.7;
	filter: alpha(opacity=7); /* For IE8 and earlier */
	
	font-weight: bold;
	
	overflow: hidden;
}

.postnav > a:focus,
.postnav > a:active,
.postnav > a:visited {
	color: rgb(80, 80, 90);
}

.postnav > a:hover,
.postnav > a:focus {
	padding-left: 40px;
	padding-right: 40px;
	
	color: rgb(80, 80, 90);
	
	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */
}

.postnav > .prev {
	float: left;
	left: 0px;
	
	border-left-width: 3px;
	border-left-style: solid;
	border-top-right-radius: 8px;
	border-bottom-right-radius: 8px;
}

.postnav > .next {
	float: right;
	right: 0px;
	
	border-right-width: 3px;
	border-right-style: solid;
	border-top-left-radius: 8px;
	border-bottom-left-radius: 8px;
}

.pagenav {
	padding-top: 20px;
	text-align: center;
}

.pagenav > span {
	border: none;
	padding: 10px 20px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	position: relative;
	
	max-width: 45%;
	
	opacity: 0.4;
	filter: alpha(opacity=4); /* For IE8 and earlier */
	
	font-weight: bold;
	
	overflow: hidden;
}

.pagenav > a {
	border: none;
	padding: 10px 20px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
	position: relative;
	
	max-width: 45%;
	
	-webkit-transition: padding .5s;
	-moz-transition: padding .5s;
	-o-transition: padding .5s;
	-ms-transition: padding .5s;
	transition: padding .5s;
	
	opacity: 0.7;
	filter: alpha(opacity=7); /* For IE8 and earlier */
	
	font-weight: bold;
	
	overflow: hidden;
}

.pagenav > a:focus,
.pagenav > a:active,
.pagenav > a:visited {
	color: rgb(80, 80, 90);
}

.pagenav > a:hover,
.pagenav > a:focus {
	padding-left: 30px;
	padding-right: 30px;
	
	color: rgb(80, 80, 90);
	
	opacity: 0.85;
	filter: alpha(opacity=85); /* For IE8 and earlier */
}

.pagenav > .newer {
	border-right-width: 3px;
	border-right-style: solid;
	border-top-left-radius: 8px;
	border-bottom-left-radius: 8px;
}

.pagenav > .older {
	border-left-width: 3px;
	border-left-style: solid;
	border-top-right-radius: 8px;
	border-bottom-right-radius: 8px;
}

.pagenav > .middle {
	border-radius: 8px;
}


/********************
 * Small device CSS
 ********************/
@media (max-width: 820px) {
	body { font-size: 16px;}
	h2 { font-size: 30px;}
	h3 { font-size: 22px;}
	header > div > h1 {font-size: 44px;}
	header > div > h2 {font-size: 18px;}
	nav > ul > li { margin-right: 4px;}
	nav > ul > li > a { padding-right: 10px; padding-left: 10px; font-size: 16px;}
	nav > ul > .active > a { padding-right: 20px; padding-left: 20px;}
	nav > ul > li > a:hover,
	nav > ul > li > a:focus { padding-right: 20px; padding-left: 20px;}
	.box {padding-top: 146px; padding-left: 10px; padding-right: 10px; }
	.project{width: 96px;}
	.portrait{width: 105px; padding-left: 20px; padding-right: 20px;}
	.fa { font-size: 19.4px; padding: 11px; padding-left: 6px; padding-right: 6px;}
}

@media (max-width:590px) {
	body { font-size: 14px;}
	h2 { font-size: 26px;}
	h3 { font-size: 20px;}
	header > div > h1 {font-size: 30px; padding-top: 10px;}
	header > div > h2 {font-size: 12px; padding-bottom: 10px;}
	nav > ul > li { margin-right: 2px;}
	nav > ul > li > a { padding-right: 2px; padding-left: 2px; font-size: 14px;}
	nav > ul > .active > a { padding-right: 10px; padding-left: 10px;}
	nav > ul > li > a:hover,
	nav > ul > li > a:focus { padding-right: 10px; padding-left: 10px;}
	.box {padding-top: 110px; padding-left: 5px; padding-right: 5px; }
	.project{width: 64px;}
	.portrait{width: 70px; padding-left: 0px; padding-right: 0px;}
	.fa { font-size: 15.8px; padding: 12px; padding-left: 4px; padding-right: 4px;}
}
@media (max-width:420px) {
	div.social { display: none !important; }
}

